# bazel-rugs-testcontainers

./: .bazelrc  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/: renovate.json
.github/workflows/: bazel.yaml
rugs/: BUILD.bazel  rugs.go  rugs_test.go
