bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "gazelle", version = "0.40.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# This structure updated by RenovateBot, regex manager
go_version = {
    "renovate_datasource": "github-tags",
    "renovate_depname": "golang/go",
    "version": "go1.22.4"
}

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = go_version["version"].lstrip("go"))

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_testcontainers_testcontainers_go",
    # "com_github_docker_docker",
)
